wrap arrows in divs with fixed size to avoid pages boxes moving when arrows are removed (current page equals first or last page)

--- a/src/components/paginator/paginator.module.scss
+++ b/src/components/paginator/paginator.module.scss
@@ -25,8 +25,10 @@
     padding: 2px;
     cursor: default;
   }
-
-  .arrow {
-    cursor: pointer;
+  .arrowContainer {
+    width: 45px;
+    .arrow {
+      cursor: pointer;
+    }
   }
 }
